# warehouse-api-fastapi

./: README.md  pyproject.toml  requirements.txt
alembic/versions/: cfe844aa9dff_initial_migration.py
app/: config.py  main.py  models.py  schemas.py
app/routers/: order.py  product.py
