[tool.poetry]
name = "wms"
version = "0.1.0"
description = "Warehouse management system built with FastAPI"
authors = ["marklen <svolochke@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wms"}]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"